# poe-overlay

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.vue  router.ts  style.css  test.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: drag.rs  input_bindings.rs  lib.rs  parser.rs  watcher.rs  win_api.rs
src/lib/: inputBindings.ts
src/store/: overlay.ts
src/views/: ActionBar.vue  MainOverlay.vue
