[package]
name = "poe-overlay"
version = "0.1.0"
description = "POE 剧情覆盖工具"
authors = ["Ka3m"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
notify = "6.1.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2.3.1"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Dwm", "Win32_UI_Controls"] }
window-vibrancy = "0.7.1"
regex = "1.12.3"
encoding_rs = "0.8.35"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["time"] }
